cabal-version: 3.0
name:          eulerproject
version:       0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/euler#readme
bug-reports: https://github.com/tonyday567/euler/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/euler

common ghc2021-stanza
  if impl(ghc >=9.2)
    default-language:
      GHC2021
  if impl(ghc <9.2)
    default-language:
      Haskell2010
    default-extensions:
      BangPatterns
      BinaryLiterals
      ConstrainedClassMethods
      ConstraintKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DoAndIfThenElse
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      ForeignFunctionInterface
      GADTSyntax
      GeneralisedNewtypeDeriving
      HexFloatLiterals
      ImplicitPrelude
      InstanceSigs
      KindSignatures
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      PatternGuards
      PolyKinds
      PostfixOperators
      RankNTypes
      RelaxedPolyRec
      ScopedTypeVariables
      StandaloneDeriving
      StarIsType
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeOperators
      TypeSynonymInstances
  if impl(ghc <9.2) && impl(ghc >=8.10)
    default-extensions:
      ImportQualifiedPost
      StandaloneKindSignatures

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Widentities
    -Wpartial-fields

library
  import:
    ghc-options-stanza
  import:
    ghc2021-stanza
  hs-source-dirs:
    src
  default-extensions:
  build-depends:
    adjunctions >= 4.4.2 && < 4.5,
    base >= 4.7 && < 5,
    numhask >=0.11 && <0.12,
    numhask-array >=0.11 && <0.12,
    primes >= 0.2 && < 0.3,
    string-interpolate ^>=0.3,
  exposed-modules:
    Euler

executable perf-euler
  import:           ghc-options-stanza
  import:
    ghc2021-stanza
  main-is:          app.hs
  hs-source-dirs:   app
  build-depends:
    base >=4.7 && <5,
    optparse-applicative >=0.17 && <0.19,
    perf >=0.11 && <0.12,
    eulerproject,
  ghc-options:
    -O2
