cabal-version: 3.0
name: eulerproject
version: 0.0.1
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2021
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/eulerproject#readme
bug-reports: https://github.com/tonyday567/eulerproject/issues
synopsis: euler project
description: euler project Haskell solutions
build-type: Simple

source-repository head
    type: git
    location: https://github.com/tonyday567/eulerproject

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    default-language: GHC2021

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , adjunctions        >=4.0 && <5
        , base               >=4.7 && <5
        , harpie             >=0.1 && <0.2
        , primes             >=0.2 && <0.3
        , string-interpolate >=0.3 && <0.4
        , time
        , containers
        , text
    exposed-modules: Eulerproject
    default-extensions:

test-suite doctests
    import: ghc2021-stanza
    main-is: doctests.hs
    hs-source-dirs: test
    build-depends:
        , base             >=4.14 && <5
        , eulerproject
        , doctest-parallel >=0.3 && <0.4
    ghc-options: -threaded
    type: exitcode-stdio-1.0
